--- a/src/scss/Pages/Login.scss
+++ b/src/scss/Pages/Login.scss
@@ -69,11 +69,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    padding: 1rem;
 
     h1 {
       font-size: 2.7rem;
       font-weight: 500;
-      color: #fff;
     }
   }
 
