--- a/src/scss/Pages/UserManagement.scss
+++ b/src/scss/Pages/UserManagement.scss
@@ -1,6 +1,5 @@
 .user-mgt {
-  height: 170vh;
-  padding: 5rem;
-  background-color: green;
-  font-size: 200px;
+  //   height: 170vh;
+  //   padding: 5rem;
+  //   background-color: green;
 }
