--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #fff;
+  background-color: #ffffffe0;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   display: flex;
@@ -23,6 +23,10 @@
 
       &:hover {
         opacity: 0.9;
+      }
+
+      @media screen and (min-width: 1024px) {
+        display: none;
       }
     }
   }
