--- a/src/scss/components/Layout.scss
+++ b/src/scss/components/Layout.scss
@@ -7,11 +7,21 @@
     grid-area: sidebar;
   }
   .content {
-    grid-area: content;
+    // grid-area: content;
+    padding: 2rem 2rem 0;
+    scroll-behavior: smooth;
+    overflow: hidden auto;
+    margin: 4.2rem 0 0 auto;
+    min-height: calc(100vh - 4.2rem);
+    width: calc(100% - 3.5rem);
+
+    @media screen and (min-width: 1024px) {
+      width: calc(100% - 250px);
+    }
   }
 
   //   display: grid;
-  min-height: 100vh;
+  min-height: 100%;
   //   grid-template-columns: 250px 4fr 1fr;
   //   grid-template-rows: auto 1fr;
   //   grid-template-areas:
