--- a/src/scss/components/SideBar.scss
+++ b/src/scss/components/SideBar.scss
@@ -29,6 +29,10 @@
       text-decoration: none;
       white-space: nowrap;
 
+      svg {
+        margin-top: 5px;
+      }
+
       &:hover {
         background: #e6e4e4a4;
       }
@@ -40,6 +44,10 @@
       border-left-color: #3a57e8;
       color: #3a57e8;
     }
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 250px;
   }
 }
 
