--- a/src/scss/Pages/Login.scss
+++ b/src/scss/Pages/Login.scss
@@ -1,5 +1,6 @@
 .login {
   display: flex;
+  width: 100%;
   min-height: 100vh;
 
   div {
@@ -12,18 +13,25 @@
     align-items: center;
     justify-content: center;
     color: #232d42;
+    width: 100%;
 
     h2 {
       margin-bottom: 1rem;
     }
 
+    form {
+      width: 70%;
+      max-width: 25rem;
+
+      @media screen and (max-width: 1024px) {
+        width: 90% !important;
+      }
+    }
+
     .form-group {
       display: flex;
       flex-direction: column;
-      width: 60%;
-      min-width: 400px;
       gap: 10px;
-      margin: 1rem 0;
 
       .form-control {
         border: 1px solid #3a57e8;
@@ -31,6 +39,7 @@
         padding: 0.6rem;
         border-radius: 0.3rem;
         background-color: #fff;
+        width: 100%;
 
         &.is-invalid {
           position: relative;
@@ -73,14 +82,29 @@
     color: #fff;
     padding: 1rem;
 
+    .form-group {
+      width: 90%;
+    }
+
     h1 {
       font-size: 2.7rem;
       font-weight: 500;
+      margin: 2rem 0;
+
+      @media screen and (max-width: 1024px) {
+        font-size: 1.5rem;
+      }
     }
   }
+}
 
-  @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
+  .login {
     flex-direction: column-reverse;
+
+    h1 {
+      font-size: 1.5rem;
+    }
   }
 }
 
