--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -16,6 +16,14 @@
     align-items: center;
     gap: 1rem;
 
+    h3 {
+      font-size: 1.3rem;
+
+      @media screen and (max-width: 1024px) {
+        font-size: 1.1rem;
+      }
+    }
+
     .svg-btn {
       color: #3a57e8;
       font-size: 1.5rem;
@@ -25,9 +33,29 @@
         opacity: 0.9;
       }
 
-      @media screen and (min-width: 1024px) {
+      @media screen and (max-width: 1024px) {
         display: none;
       }
+    }
+  }
+
+  .menu {
+    cursor: pointer;
+    font-size: 1.1rem;
+    color: #232d42;
+
+    @media screen and (min-width: 1024px) {
+      display: none;
+    }
+
+    &:hover,
+    &:active {
+      color: #3a57e8;
+    }
+
+    &.close {
+      font-size: 1.3rem;
+      font-weight: 600;
     }
   }
 
@@ -36,6 +64,8 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    overflow: hidden;
+    transition: all 0.3s;
 
     li {
       &:nth-of-type(1) {
@@ -72,6 +102,77 @@
           box-shadow: 0 2px 3px rgba(58, 87, 232, 0.154);
         }
       }
+    }
+    &.menu-list {
+      @media screen and (max-width: 1024px) {
+        display: flex;
+        position: absolute;
+        background: #fff;
+        flex-direction: column;
+        padding: 1rem;
+        width: 8rem;
+        top: 2.3rem;
+        right: 0.8rem;
+        font-size: 1rem;
+        gap: 1rem;
+        box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.1);
+
+        animation-name: slideDown;
+        -webkit-animation-name: slideDown;
+        animation-duration: 0.5s;
+        -webkit-animation-duration: 0.5s;
+        animation-timing-function: ease;
+        -webkit-animation-timing-function: ease;
+        visibility: visible !important;
+
+        li {
+          &:nth-of-type(1) {
+            font-size: 1rem;
+          }
+
+          &:nth-of-type(2) {
+            font-size: 0.9rem;
+            .role {
+              font-size: 0.8rem;
+            }
+          }
+          &:nth-of-type(3) {
+            width: 6rem;
+            text-align: center;
+            margin: 0;
+            font-size: 0.9rem;
+          }
+        }
+
+        @keyframes slideDown {
+          0% {
+            transform: translateY(-100%);
+          }
+          50% {
+            transform: translateY(5%);
+          }
+
+          100% {
+            transform: translateY(0%);
+          }
+        }
+
+        @-webkit-keyframes slideDown {
+          0% {
+            transform: translateY(-100%);
+          }
+          50% {
+            transform: translateY(50%);
+          }
+          100% {
+            transform: translateY(0%);
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 1024px) {
+      display: none;
     }
   }
 }
