--- a/src/scss/components/TicketCard.scss
+++ b/src/scss/components/TicketCard.scss
@@ -3,13 +3,37 @@
   border-radius: 0.7rem;
   box-shadow: 0 2px 7px rgba(0, 0, 0, 0.2);
   min-height: 9rem;
-  width: 100%;
+  //   max-width: 20rem;
   color: #232d42;
 
-  h3 {
-    font-size: 1rem;
-    padding: 0.5rem 0.5rem 0;
+  .ticket-card-header {
+    min-height: 2rem;
+    padding: 0 0.5rem;
     border-bottom: 1px solid grey;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+
+    h3 {
+      font-size: 1rem;
+    }
+
+    .ticket-card-btn {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      svg {
+        color: #232d42;
+        transition: all 0.3s;
+        font-size: 1rem;
+
+        &:hover {
+          font-size: 1.2rem;
+          color: #3a57e8;
+          cursor: pointer;
+        }
+      }
+    }
   }
 
   h5 {
