--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -145,27 +145,24 @@
         }
 
         @keyframes slideDown {
-          0% {
-            transform: translateY(-100%);
+          from {
+            opacity: 0;
+            transform: translateY(-3rem);
           }
-          50% {
-            transform: translateY(5%);
-          }
-
-          100% {
-            transform: translateY(0%);
+          to {
+            opacity: 1;
+            transform: translateY(0);
           }
         }
 
         @-webkit-keyframes slideDown {
-          0% {
-            transform: translateY(-100%);
+          from {
+            opacity: 0;
+            transform: translateY(-3rem);
           }
-          50% {
-            transform: translateY(50%);
-          }
-          100% {
-            transform: translateY(0%);
+          to {
+            opacity: 1;
+            transform: translateY(0);
           }
         }
       }
